Development
    When video has an ogm extension, set the demuxer to lavf, fixes audio switching issues
    Set Ctrl-L to be new hot key for open location (Gnome std)
    Set F9 to be new hot key for open playlist (Gnome std)
    Make open location window transient like preferences window
    Make advanced video window transient like preferences window
    Make preferences window transient to the main window and keep it above if the main window is
    Hook 'a' key to cycle thru the aspect ratios
    Remove disable_auto_hide and change to auto_hide_timeout, set <= 0 to disable, defaults to 3
    Add new hidden config option 'disable_auto_hide' when set true the controls don't slide away
    Rework the digital tv loader
    Updated Chinese (simplified) translation
    Added Japanese Translation by Munehiro Yamamoto
0.9.4
    Fix controls box visibility if exiting fullscreen mode while panel is sliding away
    Switch GIO async caching to use conditionals instead of locks
    Change code to use GCond to signal when mplayer is complete rather than depending on locks to block
    Updated Polish translation
    Replace usage of stdout/stderr with out/err
    Unfullscreen on last file
    Add command line option "--showsubtitles", defaults to '1' or 'on'
    Make the playlist show up everytime when first visible, go fullscreen and then come out
    Retain View Subtitle menu selection across files in the playlist
    Remove write and replace with g_io_channels_write_chars (should be safer)
    Add spawn pid cleanup
    Correct another glib assertion
    Fixed GTK assertion using 'export G_DEBUG=fatal_warnings' and ran gdb
    Remove need to set playback window to 16x16 since we now know the size of the video and window is properly sized
    Add some NULL value traps
    Only set the mixer on mplayer when using alsa as the ao, causes problems in pulse
    Prevent ao and vo from being improperly cleared
    Work around API change in libgpod