@@ -1,4 +1,8 @@
 Development
+    Require mplayer to have the -volume command line option
+    Update some labels on the config screen
+    When selecting an ao other than alsa, disable the mixer selection dialog
+    Rework mute functionality, so the icon is updated correctly
     When video has an ogm extension, set the demuxer to lavf, fixes audio switching issues
     Set Ctrl-L to be new hot key for open location (Gnome std)
     Set F9 to be new hot key for open playlist (Gnome std)
